--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,21 +1,51 @@
-<head> <base href="/home"></head>
-<div style="width: 100%;height: 100%">
-<agm-map  [latitude]="lat" [longitude]="lng" [zoom]="6">
+<nav class="navbar navbar-expand-lg navbar-light bg-light" style="width:100%; position: fixed;z-index: 1">
+  <a class="navbar-brand" href="/home" style="font-weight: bold;color: red">HENDERSON</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
 
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="/home">Home</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">SampleLink</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">SampleLink</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">SampleLink</a>
+      </li>
+      <li class="nav-item">
+       <button [hidden]="user=='public'" type="button" class="btn btn-light fas fa-calendar-alt" (click)="open(content)"><a href="/record">History Data</a></button>
+      </li>
+    </ul>
+     <span class="navbar-text" style="padding-right: 5px;">({{user}})</span>
+
+    <button [hidden]="user!='public'" type="button" class="btn btn-link" ><a href="/login">Login</a></button>
+    <button [hidden]="user=='public'" type="button" class="btn btn-danger" (click)="logout()" >Log out</button>
+
+  </div>
+</nav>
+
+
+
+<div>
+<agm-map  [latitude]="lat" [longitude]="lng" [zoom]="6">
   <ng-container >
-    <agm-polyline *ngFor="let group of Routes;let i = index;" strokeColor="black" [strokeOpacity]="0.6" [clickable]=false>
-         <agm-marker  [latitude]="positions[i].Lat" [longitude]="positions[i].Long"  [iconUrl]="icon" >
-           
-            <agm-info-window [disableAutoPan]=true  #truckwindow>
+    <agm-polyline [visible]="user=='user'|| user=='admin'" *ngFor="let group of Routes;let i = index;" strokeColor="black" [strokeOpacity]="0.6" [clickable]=false>
+         <agm-marker   [latitude]="positions[i].Lat" [longitude]="positions[i].Long"  [iconUrl]="icon" >     
+            <agm-info-window  [disableAutoPan]=true  #truckwindow>
                 <p>Alt:&nbsp;<span>{{cars[i].Alt}}</span></p>
                 <p>GPS_head:&nbsp;{{cars[i].GPS_head}}</p>
                 <p>Acc_mag:&nbsp;{{cars[i].Acc_mag}}</p>
-                <p>Conveyor:&nbsp;{{cars[i].Conveyor}}</p>
-                <p>Spinner:&nbsp;{{cars[i].Spinner}}</p>
-                <p>Prewet:&nbsp;{{cars[i].Prewet}}</p>
+                <p [hidden]="user=='public'">Conveyor:&nbsp;{{cars[i].Conveyor}}</p>
+                <p [hidden]="user=='public'">Spinner:&nbsp;{{cars[i].Spinner}}</p>
+                <p [hidden]="user=='public'">Prewet:&nbsp;{{cars[i].Prewet}}</p>
                 <p>Time:&nbsp;{{cars[i].time}}</p>
             </agm-info-window>
-
          </agm-marker>
          
 <!--         <agm-info-window [isOpen]="point.isopen" (infoWindowClose)="windowclose(i,x)" [latitude]="point.latitude"  [longitude]="point.longitude" [disableAutoPan]=true id={{point.id}}>
@@ -28,20 +58,14 @@
         <p>Time:&nbsp;{{point.time}}</p>
         </agm-info-window> -->
 
-      <agm-polyline-point  *ngFor="let point of group;let x = index;" [latitude]="point.latitude" [longitude]="point.longitude">
-            <agm-circle [latitude]="point.latitude"  [longitude]="point.longitude" fillColor="green" [radius]="10" 
-            (circleClick)="circleclick(point,pointwindowinfo)"></agm-circle>
+      <agm-polyline-point *ngFor="let point of group;let x = index;" [latitude]="point.latitude" [longitude]="point.longitude">
+            <agm-circle [visible]="user=='admin'" [clickable]="user=='admin'"   [latitude]="point.latitude"  [longitude]="point.longitude" fillColor="green" [radius]="20" (circleClick)="circleclick(point,pointwindowinfo)"></agm-circle>
+            
       </agm-polyline-point>
 
     </agm-polyline>
 
   </ng-container>
-
-
-
-
-
-
 
 <agm-info-window [disableAutoPan]=true [latitude]="markPoint.marklat" [longitude]="markPoint.marklng" #pointwindowinfo>
         <p>Alt:&nbsp;<span>{{markPoint.Alt}}</span></p>
@@ -57,4 +81,49 @@
 
 
 
-</div>
+
+<ng-template #content let-modal>
+  <div class="modal-header">
+    <h5 class="modal-title" id="modal-basic-title"><a href="/login">History Record</a></h5>
+    <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  <div class="modal-body">
+    <form>
+      <div class="form-group">
+        <label for="dateOfBirth">Date of Record</label>
+        <div>
+            <ngb-datepicker #dp="ngbDatepicker" (select)="onDateSelection($event)" [displayMonths]="2" [dayTemplate]="t" outsideDays="hidden">
+            </ngb-datepicker>
+
+            <ng-template #t let-date let-focused="focused">
+              <span class="custom-day"
+                    [class.focused]="focused"
+                    [class.range]="isRange(date)"
+                    [class.faded]="isHovered(date) || isInside(date)"
+                    (mouseenter)="hoveredDate = date"
+                    (mouseleave)="hoveredDate = null">
+                {{ date.day }}
+              </span>
+            </ng-template>
+
+        </div>
+      </div>
+    </form>
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-outline-dark" (click)="modal.close('Close click')" >Cancel</button>
+    <button type="button" class="btn btn-outline-primary" (click)="modal.close('Save click')">Submit</button>
+  </div>
+</ng-template>
+
+
+
+
+
+<!-- 
+<hr>
+
+<pre>{{closeResult}}</pre>
+ -->
