--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,13 +1,15 @@
-body{
-    height:750px;
+html,body{
+    margin:0;
+    height: 100vh;
+    width: 100%;
     font-family: sans-serif;
     background-image: url("image/back.jpg");
-    background-size: cover;
+    background-size: 100% 100%;
    
 }
 
 .box{
-    width:300px;
+    width:400px;
     padding: 40px;
     position: absolute;
     top:50%;
